--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-Ulož celý tento soubor jako `tabata-single.html` a otevři v prohlížeči
-dvojklikem. ```html
 <!DOCTYPE html>
 <html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tabata Timer (single-file)</title>
+    <title>Tabata Timer</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="app">
       <header class="header">
         <h1>Tabata Timer</h1>
-        <p class="sub">Jednoduchý intervalový časovač – práce / pauzy / kola</p>
+        <p class="sub">práce / pauzy / kola</p>
       </header>
 
       <section class="panel" id="config">
