--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tabata Timer</title>
+    <title>Tabata Timer (jednosouborová verze)</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="app">
       <header class="header">
         <h1>Tabata Timer</h1>
-        <p class="sub">práce / pauzy / kola</p>
+        <p class="sub">NASTAVENÍ</p>
       </header>
 
       <section class="panel" id="config">
@@ -110,4 +110,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-```
