--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tabata Timer (jednosouborová verze)</title>
+    <title>Tabata Timer</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -103,7 +103,7 @@
       </section>
 
       <footer class="footer">
-        <p><kbd>Space</kbd> Pauza/Resume · <kbd>R</kbd> Reset</p>
+        <p><kbd>pauza = </kbd> space - <kbd>reset = </kbd> r</p>
       </footer>
     </main>
 
